fix scroll smooth bux on mobile device

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Montserrat:wght@400;700&display=swap');
 
+*, ::before, ::after {
+  padding: 0;
+  margin: 0;
+}
 
 .App {
   font-family: 'Montserrat', sans-serif;
@@ -7,15 +11,7 @@
   color: #ffffff;
   margin: 0;
   padding: 0;
-  height: 100vh;
-  overflow-y:scroll;
-  scroll-behavior: smooth;
-  /* overflow: hidden; */
-  /* width: 100%; */
-  /* background-image: url('/background.svg');
-  background-size: cover; 
-  background-position: center;
-  background-repeat: no-repeat;  */
+  overflow: hidden;
 }
 
 
