--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,6 @@ code {
 }
 
 
-.html{
-
+html {
+  scroll-behavior: smooth;
 }
